# cmake_build_c_and_asm_project

./: CMakeLists.txt  README.md  add.asm  main.cpp
